--- a/user.html
+++ b/user.html
@@ -40,6 +40,7 @@
          font-size: 45px;
          line-height: 45px;
          color: #333;
+         text-align: center;
          
          }
          .invoice-box table tr.information table td {
