--- a/adminview.html
+++ b/adminview.html
@@ -2,7 +2,7 @@
     <html>
        <head>
           <meta charset="utf-8">
-          <title>PDF Template Of User</title>
+          <title>PDF Template Of Admin</title>
           <style>
              .invoice-box {
              max-width: 800px;
