--- a/user.html
+++ b/user.html
@@ -127,29 +127,27 @@
                  <th>LEARNING</th>
                  <th>DISCUSSION</th>
                  <th>IMPLEMENTATION</th> 
-                 <th>APTITUDE</th>
-                 
+                 <th>ERROR DEBUGGING</th>
                 </tr>
                 <tr class = "item">
                  <td>${r_d}</td>
                  <td>${learn}</td>
                  <td>${disc}</td>
                  <td>${implement}</td>
-                 <td>${apti}</td>
-                 
+                 <td>${error_bug}</td>
                 </tr>
              </table><br>
-               <table>
+             <table>
                <tr class ="heading">
                 <th>CODING_TEST ONLINE</th>
                 <th>CODING_TEST OFFLINE</th>
-                <th>ERROR DEBUGGING</th>
+                <th>APTITUDE</th>
                 <th>REVISION</th> 
                </tr>
                <tr class = "item">
                 <td>$coding_on</td>
                 <td>${coding_off}</td>
-                <td>${error_bug}</td>
+                <td>${apti}</td>
                 <td>${revision}</td>
                </tr>
             </table>
@@ -158,7 +156,7 @@
          </table>
          <br/><br>
 
-         <h2 class="justify-center">Hey ! The Number of Hours you need to work to reach TOP ${num} : ${hours_goal}</h2>
+         <h2 class="justify-center">Hey!! The Number of Hours you need to work to reach <br><br>TOP 10 is ${top_10}<br><br>TOP 20 is ${top_20} </h2>
       </div>
    </body>
 </html>
