--- a/one.html
+++ b/one.html
@@ -82,10 +82,11 @@
 
              <script type="text/javascript">
              function GenerateTable() {
-                 //Build an array containing Customer records.
+                 //Pass an array containing records of the best performer
                  var customers = new Array();
                  customers.push(["uuid", "Name", "working_days","Present_days","total_hrs","avg_hours"]);
                  customers.push([1, "Ankith ", "120","115","720","400"]);
+                //you need not push anything here since it'll already be present in the array
                       
           
                  //Create a HTML Table element.
