--- a/user_chart.html
+++ b/user_chart.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>PDF Template Of ALL MEMBERS</title>
+      <title>PDF Template Of User_chart</title>
       <style>
          .invoice-box {
          max-width: 800px;
