--- a/test_admin.html
+++ b/test_admin.html
@@ -661,10 +661,10 @@
              }
              function graph() {
              var chart = new CanvasJS.Chart("chartContainer", {
-	animationEnabled: true,
+	
 	theme: "light2",
 	title:{
-		text: "Site Traffic"
+		text: "WEEKLY REPORT"
 	},
 	axisX:{
 		valueFormatString: "DD MMM",
@@ -808,10 +808,8 @@ function toogleDataSeries(e){
           <div id="dvTable22"></div>
           <br />
          
-          <div style="text-align: center;"><label><b>REPORT IN GRAPH</b></label></div>
-          <div style="text-align: center;">
-            <label><b><u>WEEKLY REPORT</u></b></label>
-         </div>
+          <div style="text-align: center;font-size: xx-large;"><label><b>REPORT IN GRAPH</b></label></div><BR>
+    
          <div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
  
          <br>
