--- a/admin_2.html
+++ b/admin_2.html
@@ -458,6 +458,26 @@
             { x: "${s19}", y: "${h19}" },
             { x: "${s20}", y: "${h20}" }
 		]
+	},
+	{
+		type: "line",
+		showInLegend: true,
+		name: "DOMAIN",
+        color: "rosybrown",
+		
+		dataPoints: [
+            { x: "${s21}", y: "${h21}" },
+            { x: "${s22}", y: "${h22}" },
+            { x: "${s23}", y: "${h23}" },
+            { x: "${s24}", y: "${h24}" },
+            { x: "${s25}", y: "${h25}" },
+            { x: "${s26}", y: "${h26}" },
+            { x: "${s27}", y: "${h27}" },
+            { x: "${s28}", y: "${h28}" },
+            { x: "${s29}", y: "${h29}" },
+            { x: "${s30}", y: "${h30}" } 
+            
+		]
 	}]
 });
 chart.render();
