--- a/normaluser-edit (1).html
+++ b/normaluser-edit (1).html
@@ -360,15 +360,15 @@
         <div class="piechart">
         <script type="text/javascript">
                 var dataset =[
-                  { "name": "R&D", "value": 5 },
-                  { "name": "LEARNING", "value": 10 },
-                  { "name": "DISCUSSION", "value": 8 },
-                  { "name": "IMPLEMENTATION", "value": 9 },
-                  { "name": "ERROR DEBUGGING", "value": 2 },
-                  { "name": "CODING_TEST OFFLINE", "value": 6 },
-                  { "name": "CODING_TEST ONLINE", "value": 8 },
-                  { "name": "APTITUDE", "value": 6 }, 
-                  { "name": "OPS", "value": 2 }
+                  { "name": "R&D", "value": ${r_d} },
+                  { "name": "LEARNING", "value": ${learn}},
+                  { "name": "DISCUSSION", "value": ${disc} },
+                  { "name": "IMPLEMENTATION", "value": ${implement} },
+                  { "name": "ERROR DEBUGGING", "value": ${error_bug} },
+                  { "name": "CODING_TEST OFFLINE", "value": ${coding_off}},
+                  { "name": "CODING_TEST ONLINE", "value": ${coding_on}},
+                  { "name": "APTITUDE", "value": ${apti} }, 
+                  { "name": "OPS", "value": ${ops} }
                 ]
                
                 var width = 400; // グラフの幅
